--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Text summariser</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+        <link rel="stylesheet" href="static/styles.css">
         <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
     </head>
     <body>
