--- a/templates/summary.html
+++ b/templates/summary.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Summary</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+        <link rel="stylesheet" href="static/styles.css">
     </head>
     <body>
         <h1>
