--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
                 Otherwise, the program will then use the <a href="https://github.com/martin-majlis/Wikipedia-API/">wikipedia api</a> to find the corresponding article for the text inputted, and then get the text of the article.<br>
                 Then a <a href="https://arxiv.org/pdf/1910.13461.pdf">BART transformer</a> (pre-trained on the <a href="https://huggingface.co/facebook/bart-large-cnn">bart-large-cnn</a> model) is used to generate a summary of the given text.<br>
                 This summary is then checked for accuracy using the Rouge-2 F1 score from the <a href="https://aclanthology.org/W04-1013.pdf">Rouge package</a>.<br>
-                The reference summary used for accuracy checking is the first three sentences of the article.<br><br>
+                The reference summary used for accuracy checking is the first three sentences of the text.<br><br>
                 <a href="https://github.com/Kaziksobo/summarizer_web_app">Github</a>
                 </p>
             </div>
