added error reporting

--- a/templates/flag.html
+++ b/templates/flag.html
@@ -17,16 +17,12 @@
                     Time elapsed - {{ time }}s<br>
                     Accuracy (Rouge-2 F1 score) - {{ score }}
                 </p>
-                <form action="/flag" method="post" autocomplete="off">
-                    <h3>Report:</h3>
-                    <input type="radio" id="innacurate summary" name="flag" value="Innacurate summary">
-                    <label for="innacurate summary">Innacurate summary</label><br>
-                    <input type="radio" id="innacurate accuracy score" name="flag" value="Innacurate accuracy score">
-                    <label for="innacurate accuracy score">Innacurate accuracy score</label><br>
-                    <input type="radio" id="other" name="flag" value="other">
-                    <label for="other">Other</label>
-                    <input type="submit" name="flag" value="Report">
-                </form>
+                <h3>
+                    Report:
+                </h3>
+                <p>
+                    Thank you for your feedback
+                </p>
             </div>
             <div class="summary">
                 <h1>
