--- a/templates/summary.html
+++ b/templates/summary.html
@@ -7,6 +7,12 @@
         <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
     </head>
     <body>
+        <h1>
+            Summariser
+        </h1>
+        <h3>
+            Uses a BART transformer to generate an accurate summary of an article or topic
+        </h3>
         <div class="flex-container">
             <div class="stats">
                 <h1>
