fixed report form

--- a/templates/summary.html
+++ b/templates/summary.html
@@ -30,7 +30,7 @@
                     <input type="radio" id="innacurate accuracy score" name="flag" value="Innacurate accuracy score">
                     <label for="innacurate accuracy score">Innacurate accuracy score</label><br>
                     <input type="radio" id="other" name="flag" value="other">
-                    <label for="other">Other</label>
+                    <label for="other">Other</label><br>
                     <input type="submit" name="flag" value="Report">
                 </form>
             </div>
