added length reduction calculation

--- a/templates/summary.html
+++ b/templates/summary.html
@@ -21,7 +21,8 @@
                 <p>
                     Text summarised - {{ text_title }}<br>
                     Time elapsed - {{ time }}s<br>
-                    Accuracy (Rouge-2 F1 score) - {{ score }}
+                    Accuracy (Rouge-2 F1 score) - {{ score }}<br>
+                    Reduction - {{ reduction }}%
                 </p>
                 <form action="/flag" method="post" autocomplete="off">
                     <h3>Report:</h3>
