nowo checks logged summaries before generating

--- a/templates/flag.html
+++ b/templates/flag.html
@@ -36,8 +36,10 @@
                     Summary:
                 </h1>
                 <p>
-                    {{ summary }}
+                    {{ summary }}<br><br>
                 </p>
+                <p style="color: red;">
+                    {{ error }}
             </div>
         </div>
     </body>
