--- a/templates/summary.html
+++ b/templates/summary.html
@@ -40,7 +40,10 @@
                     Summary:
                 </h1>
                 <p>
-                    {{ summary }}
+                    {{ summary }}<br><br>
+                </p>
+                <p style="color: red;">
+                    {{ error }}
                 </p>
             </div>
         </div>
