--- a/templates/summary.html
+++ b/templates/summary.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Summary</title>
         <link rel="stylesheet" href="static/styles.css">
-        <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="static/favicon.ico">
     </head>
     <body>
         <h1>
